src/test/deca/context/valid/def_affect/cast-int-int.deca
// Description:
//    Programme minimaliste testant le cast simple.
//
// Resultats:
//    a = 1

{
    int a = (int) (1);
}
