src/test/deca/context/invalid/class/dot-identifier-int.deca
// Programme testant dot identifier sur un entier

class A {
    int i;
}

{
    int j;
    print(j.i);
}